--- a/public/css/app.css
+++ b/public/css/app.css
@@ -953,11 +953,20 @@ select {
 .right-0 {
   right: 0px;
 }
+.bottom-0 {
+  bottom: 0px;
+}
+.top-0 {
+  top: 0px;
+}
 .z-0 {
   z-index: 0;
 }
 .z-50 {
   z-index: 50;
+}
+.z-10 {
+  z-index: 10;
 }
 .col-span-6 {
   grid-column: span 6 / span 6;
@@ -968,6 +977,14 @@ select {
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
+}
+.my-1 {
+  margin-top: 0.25rem;
+  margin-bottom: 0.25rem;
+}
+.my-8 {
+  margin-top: 2rem;
+  margin-bottom: 2rem;
 }
 .ml-3 {
   margin-left: 0.75rem;
@@ -1038,6 +1055,21 @@ select {
 .mb-4 {
   margin-bottom: 1rem;
 }
+.mr-6 {
+  margin-right: 1.5rem;
+}
+.mr-8 {
+  margin-right: 2rem;
+}
+.ml-5 {
+  margin-left: 1.25rem;
+}
+.mr-7 {
+  margin-right: 1.75rem;
+}
+.mr-1 {
+  margin-right: 0.25rem;
+}
 .mt-11 {
   margin-top: 2.75rem;
 }
@@ -1061,6 +1093,9 @@ select {
 }
 .hidden {
   display: none;
+}
+.aspect-square {
+  aspect-ratio: 1 / 1;
 }
 .h-5 {
   height: 1.25rem;
@@ -1088,6 +1123,20 @@ select {
 }
 .h-20 {
   height: 5rem;
+}
+.h-full {
+  height: 100%;
+}
+.h-max {
+  height: -webkit-max-content;
+  height: -moz-max-content;
+  height: max-content;
+}
+.h-7 {
+  height: 1.75rem;
+}
+.h-3 {
+  height: 0.75rem;
 }
 .h-screen {
   height: 100vh;
@@ -1137,8 +1186,22 @@ select {
 .w-20 {
   width: 5rem;
 }
+.w-3 {
+  width: 0.75rem;
+}
+.w-max {
+  width: -webkit-max-content;
+  width: -moz-max-content;
+  width: max-content;
+}
+.w-7 {
+  width: 1.75rem;
+}
 .w-2\/3 {
   width: 66.666667%;
+}
+.w-11\/12 {
+  width: 91.666667%;
 }
 .min-w-0 {
   min-width: 0px;
@@ -1151,6 +1214,9 @@ select {
 }
 .max-w-xl {
   max-width: 36rem;
+}
+.max-w-lg {
+  max-width: 32rem;
 }
 .flex-1 {
   flex: 1 1 0%;
@@ -1254,6 +1320,11 @@ select {
   margin-top: calc(1.5rem * calc(1 - var(--tw-space-y-reverse)));
   margin-bottom: calc(1.5rem * var(--tw-space-y-reverse));
 }
+.space-y-3 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-y-reverse: 0;
+  margin-top: calc(0.75rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(0.75rem * var(--tw-space-y-reverse));
+}
 .space-x-4 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-x-reverse: 0;
   margin-right: calc(1rem * var(--tw-space-x-reverse));
@@ -1261,6 +1332,9 @@ select {
 }
 .overflow-hidden {
   overflow: hidden;
+}
+.overflow-x-auto {
+  overflow-x: auto;
 }
 .overflow-y-auto {
   overflow-y: auto;
@@ -1307,6 +1381,9 @@ select {
 .border-2 {
   border-width: 2px;
 }
+.border-0 {
+  border-width: 0px;
+}
 .border-b-2 {
   border-bottom-width: 2px;
 }
@@ -1322,20 +1399,32 @@ select {
 .border-transparent {
   border-color: transparent;
 }
+.border-green-87 {
+  --tw-border-opacity: 1;
+  border-color: rgb(140 197 135 / var(--tw-border-opacity));
+}
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
-.bg-grey-0D {
-  background-color: #0000000D;
+.bg-green-87 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(140 197 135 / var(--tw-bg-opacity));
 }
 .bg-green-75 {
   --tw-bg-opacity: 1;
   background-color: rgb(116 139 117 / var(--tw-bg-opacity));
 }
-.bg-green-87 {
+.bg-pink {
   --tw-bg-opacity: 1;
-  background-color: rgb(140 197 135 / var(--tw-bg-opacity));
+  background-color: rgb(214 2 151 / var(--tw-bg-opacity));
+}
+.bg-grey-0D {
+  background-color: #0000000D;
+}
+.bg-green-38 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(58 81 56 / var(--tw-bg-opacity));
 }
 .bg-opacity-25 {
   --tw-bg-opacity: 0.25;
@@ -1348,6 +1437,18 @@ select {
 }
 .bg-no-repeat {
   background-repeat: no-repeat;
+}
+.fill-green-75 {
+  fill: #748B75;
+}
+.fill-green-38 {
+  fill: #3A5138;
+}
+.fill-black {
+  fill: #000000;
+}
+.fill-white {
+  fill: #FFFFFF;
 }
 .object-cover {
   -o-object-fit: cover;
@@ -1448,6 +1549,12 @@ select {
 .pb-1 {
   padding-bottom: 0.25rem;
 }
+.pl-6 {
+  padding-left: 1.5rem;
+}
+.pr-2 {
+  padding-right: 0.5rem;
+}
 .text-left {
   text-align: left;
 }
@@ -1496,6 +1603,9 @@ select {
 .font-bold {
   font-weight: 700;
 }
+.font-extrabold {
+  font-weight: 800;
+}
 .uppercase {
   text-transform: uppercase;
 }
@@ -1517,6 +1627,14 @@ select {
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+.text-green-38 {
+  --tw-text-opacity: 1;
+  color: rgb(58 81 56 / var(--tw-text-opacity));
+}
+.text-green-75 {
+  --tw-text-opacity: 1;
+  color: rgb(116 139 117 / var(--tw-text-opacity));
 }
 .underline {
   -webkit-text-decoration-line: underline;
@@ -1561,6 +1679,11 @@ select {
 .shadow-xl {
   --tw-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 20px 25px -5px var(--tw-shadow-color), 0 8px 10px -6px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+.shadow-2xl {
+  --tw-shadow: 0 25px 50px -12px rgb(0 0 0 / 0.25);
+  --tw-shadow-colored: 0 25px 50px -12px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 .ring-1 {
@@ -1611,6 +1734,56 @@ select {
 .ease-in {
   transition-timing-function: cubic-bezier(0.4, 0, 1, 1);
 }
+.placeholder\:font-bold::-moz-placeholder {
+  font-weight: 700;
+}
+.placeholder\:font-bold:-ms-input-placeholder {
+  font-weight: 700;
+}
+.placeholder\:font-bold::placeholder {
+  font-weight: 700;
+}
+.placeholder\:text-grey-4D::-moz-placeholder {
+  color: #0000004D;
+}
+.placeholder\:text-grey-4D:-ms-input-placeholder {
+  color: #0000004D;
+}
+.placeholder\:text-grey-4D::placeholder {
+  color: #0000004D;
+}
+.after\:absolute::after {
+  content: var(--tw-content);
+  position: absolute;
+}
+.after\:top-0::after {
+  content: var(--tw-content);
+  top: 0px;
+}
+.after\:left-0::after {
+  content: var(--tw-content);
+  left: 0px;
+}
+.after\:h-full::after {
+  content: var(--tw-content);
+  height: 100%;
+}
+.after\:w-1::after {
+  content: var(--tw-content);
+  width: 0.25rem;
+}
+.after\:bg-black::after {
+  content: var(--tw-content);
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+}
+.after\:content-\[\'\'\]::after {
+  --tw-content: '';
+  content: var(--tw-content);
+}
+.hover\:fill-white:hover {
+  fill: #FFFFFF;
+}
 .hover\:opacity-90:hover {
   opacity: 0.9;
 }
@@ -1631,6 +1804,9 @@ select {
 }
 .disabled\:opacity-25:disabled {
   opacity: 0.25;
+}
+.group:hover .group-hover\:block {
+  display: block;
 }
 @media (min-width: 640px) {
 
